// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`localizeRoutes > basic > should be localized routing 1`] = `
[
  {
    "name": "home___en",
    "path": "/en",
  },
  {
    "name": "home___ja",
    "path": "/ja",
  },
  {
    "name": "about___en",
    "path": "/en/about",
  },
  {
    "name": "about___ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > has children > should be localized routing 1`] = `
[
  {
    "children": [
      {
        "name": "user-profile___en",
        "path": "profile",
      },
      {
        "name": "user-posts___en",
        "path": "posts",
      },
    ],
    "name": "user___en",
    "path": "/en/user/:id",
  },
  {
    "children": [
      {
        "name": "user-profile___ja",
        "path": "profile",
      },
      {
        "name": "user-posts___ja",
        "path": "posts",
      },
    ],
    "name": "user___ja",
    "path": "/ja/user/:id",
  },
]
`;

exports[`localizeRoutes > route option resolver: routing disable > should be disabled routing 1`] = `
[
  {
    "name": "home",
    "path": "/",
  },
  {
    "name": "about",
    "path": "/about",
  },
]
`;

exports[`localizeRoutes > strategy: "prefix_and_default" > should be localized routing 1`] = `
[
  {
    "name": "home___en",
    "path": "/",
  },
  {
    "name": "home___ja",
    "path": "/ja",
  },
  {
    "name": "about___en",
    "path": "/about",
  },
  {
    "name": "about___ja",
    "path": "/ja/about",
  },
]
`;

exports[`localizeRoutes > trailing slash > should be localized routing 1`] = `
[
  {
    "name": "home___en",
    "path": "/en/",
  },
  {
    "name": "home___ja",
    "path": "/ja/",
  },
  {
    "name": "about___en",
    "path": "/en/about/",
  },
  {
    "name": "about___ja",
    "path": "/ja/about/",
  },
]
`;
